--- a/JavaFX/EmloyeeFile/src/main/resources/vn/employeefile/emloyee.fxml
+++ b/JavaFX/EmloyeeFile/src/main/resources/vn/employeefile/emloyee.fxml
@@ -3,12 +3,15 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.text.Font?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vn.employeefile.EmloyeeController">
    <AnchorPane fx:id="apTableView" layoutX="65.0" layoutY="100.0" prefHeight="400.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="0.0">
@@ -36,14 +39,21 @@
             <SVGPath content="M11 15a4 4 0 100-8 4 4 0 000 8zm5-4a5 5 0 11-10 0 5 5 0 0110 0zM9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012zM1 0a1 1 0 00-1 1v8a1 1 0 001 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 00-2-2V3a2 2 0 002-2h10a2 2 0 002 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 00-1-1H1zM9.998 5.083 10 5a2 2 0 10-3.132 1.65 5.982 5.982 0 013.13-1.567z" />
          </graphic>
       </Button>
-      <Button fx:id="btnSave" layoutX="24.0" layoutY="311.0" mnemonicParsing="false" onAction="#saveToFile" prefHeight="25.0" prefWidth="226.0" text="Save to file">
+      <Button fx:id="btnSave" layoutX="24.0" layoutY="311.0" mnemonicParsing="false" onAction="#saveToFile" prefHeight="25.0" prefWidth="226.0" text="Save to file" textFill="#604bda">
          <graphic>
-            <SVGPath content="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z" />
+            <FontIcon iconColor="#604bda" iconLiteral="fas-save" iconSize="14" />
          </graphic>
          <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="12.0" />
          </font>
       </Button>
+      <RadioButton fx:id="rbMale" layoutX="83.0" layoutY="151.0" mnemonicParsing="false" text="Male">
+         <toggleGroup>
+            <ToggleGroup fx:id="tggGender" />
+         </toggleGroup>
+      </RadioButton>
+      <RadioButton fx:id="rbFemale" layoutX="176.0" layoutY="151.0" mnemonicParsing="false" text="Female" toggleGroup="$tggGender" />
+      <Label fx:id="lblGender" layoutX="23.0" layoutY="151.0" text="Gender" />
    </AnchorPane>
    <AnchorPane fx:id="apPromote" prefHeight="400.0" prefWidth="300.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="0.0">
       <children>
@@ -59,7 +69,7 @@
          <Button fx:id="btnCancel" layoutX="100.0" layoutY="241.0" mnemonicParsing="false" onAction="#backToView" text="Cancel" />
       </children>
    </AnchorPane>
-   <TableView fx:id="tvEmloyee" layoutX="300.0" prefHeight="400.0" prefWidth="300.0">
+   <TableView fx:id="tvEmloyee" layoutX="295.0" layoutY="14.0" prefHeight="371.0" prefWidth="291.0">
       <columns>
          <TableColumn fx:id="colCode" editable="false" prefWidth="75.0" text="Code" />
          <TableColumn fx:id="colName" editable="false" prefWidth="102.0" text="Name" />
